--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 ** Refactor printk's and add affordable logging
 ** Add command line parameters to define what to do with tampered processes
 ** Remove dumps to kernel log
-** Create systend unit and other staff
+** Create systemd unit and other staff
 ** Create packaging staff
 ** Improve error handling
 
@@ -10,7 +10,7 @@
 ** Ho handling for dynamic expansion/shrink of available PIDs range
 
 * Improvements:
-** Add support for /proc (add output to procfs)
+** Add support for /proc, output of hashtable to procfs
 ** Add managed list of processes to inspect
 ** Add some kernel inspect hacks from LKRG
 
